LG-12119: Add agency NCUA to contact form (v2) (#1206)
* Add agency NCUA

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -71,6 +71,7 @@ contact_page:
       'myTreasury': myTreasury
       'National Aeronautics and Space Administration': National Aeronautics and Space Administration
       'National Archives and Records Administration (NARA)': National Archives and Records Administration (NARA)
+      'National Credit Union Administration (NCUA)': National Credit Union Administration (NCUA)
       'National Endowment for the Humanities (NEH)': National Endowment for the Humanities (NEH)
       'National Labor Relations Board': National Labor Relations Board
       'Office of Personnel Management': Office of Personnel Management (OPM)
