--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -78,6 +78,7 @@ contact_page:
       'myTreasury': myTreasury
       'National Aeronautics and Space Administration': Administración Nacional de Aeronáutica y el Espacio
       'National Archives and Records Administration (NARA)': Archivos Nacionales y Administracion de Documentos (NARA)
+      'National Credit Union Administration (NCUA)': Administración Nacional de Cooperativas de Crédito (NCUA)
       'National Endowment for the Humanities (NEH)': Fondo Nacional para las Humanidades (NEH, siglas en inglés)
       'National Labor Relations Board': Junta Nacional de Relaciones Laborales
       'Office of Personnel Management': Oficina de Administración de Personal (OPM)
