--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -73,6 +73,7 @@ contact_page:
       'myTreasury': myTreasury
       'National Aeronautics and Space Administration': Administration Nationale de l’Espace et de l’Aéronautique
       'National Archives and Records Administration (NARA)': Archives nationales et administration des documents (NARA)
+      'National Credit Union Administration (NCUA)': Administration nationale des coopératives de crédit (NCUA)
       'National Endowment for the Humanities (NEH)': Fondation nationale pour les sciences humaines (NEH)
       'National Labor Relations Board': Commission nationale des relations de travail
       'Office of Personnel Management': Bureau de la gestion du personnel (OPM)
