--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -37,7 +37,6 @@ contact_page:
   required: requerido
   support_request_form:
     agencies:
-      '.gov Registrar': Registrador .gov
       'Central Intelligence Agency': Agence centrale de renseignement
       'Consumer Financial Protection Bureau': Oficina para la Protección Financiera del Consumidor
       'Customs and Border Protection Jobs': Trabajos en Aduanas y Protección de Fronteras
@@ -67,6 +66,7 @@ contact_page:
         Depósitos (FDIC)
       'FEMA Disaster Assistance': Asistencia de FEMA en caso de catástrofe
       'General Services Administration': Administración de Servicios Generales
+      'Get .gov': Get .gov
       'GSA Sam.gov': GSA SAM.gov
       'Health and Human Services': Departamento de Salud y Servicios Humanos
       'HHS Grants.gov': Grants.gov del HHS
