--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -36,7 +36,6 @@ contact_page:
   required: obligatoire
   support_request_form:
     agencies:
-      '.gov Registrar': Registre .gov
       'Central Intelligence Agency': Agence centrale de renseignement
       'Consumer Financial Protection Bureau': Bureau financier de la protection des consommateurs
       'Customs and Border Protection Jobs': Emplois dans le domaine des douanes et de la protection des frontières
@@ -62,6 +61,7 @@ contact_page:
       'FDIC Resolution Request Management Portal': FDIC demande un portail de gestion des résolutions
       'FEMA Disaster Assistance': Assistance FEMA en cas de catastrophe
       'General Services Administration': Administration des services généraux
+      'Get .gov': Get .gov
       'GSA Sam.gov': GSA SAM.gov
       'Health and Human Services': Santé et services sociaux
       'HHS Grants.gov': HHS Grants.gov
