--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@18f/identity-address-search": "^3.1.1",
     "@18f/identity-build-sass": "^3.0.0",
     "@18f/identity-components": "^2.0.0",
-    "@18f/identity-design-system": "^9.0.0-beta.2",
+    "@18f/identity-design-system": "^9.0.0",
     "@18f/identity-i18n": "^1.0.1",
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
