--- a/_config.yml
+++ b/_config.yml
@@ -140,6 +140,16 @@ exclude:
   - tsconfig.json
   - vendor
   - webpack.config.js
+
+copy_files:
+  - from:
+      - node_modules/@18f/identity-design-system/dist/assets/css
+      - node_modules/@18f/identity-design-system/dist/assets/fonts
+      - node_modules/@18f/identity-design-system/dist/assets/img
+    to: assets
+  - from: node_modules/@18f/identity-design-system/dist/assets/js/init.js
+    to: assets/js
+
 keep_files:
   - assets/css
   - assets/js
