--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ languages:
   - en
   - es
   - fr
+  - zh
 
 exclude_from_localizations: ['javascript', 'images', 'css']
 
@@ -109,6 +110,10 @@ defaults:
       path: 'content/**/*/*._fr.md'
     values:
       lang: fr
+  - scope:
+      path: 'content/**/*/*._zh.md'
+    values:
+      lang: zh
 
 include:
   # dotfiles are excluded by default
