add chinese to language picker

--- a/_data/en/settings.yml
+++ b/_data/en/settings.yml
@@ -201,6 +201,7 @@ global:
     en: English
     es: Español
     fr: Français
+    zh: Chinese
 help_page:
   categories:
     - description: Create your account. Learn about authentication options and more
