Update agency names

--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -66,7 +66,7 @@ contact_page:
         Depósitos (FDIC)
       'FEMA Disaster Assistance': Asistencia de FEMA en caso de catástrofe
       'General Services Administration': Administración de Servicios Generales
-      'Get .gov': Get.gov
+      'Get.gov': Get.gov
       'GSA Sam.gov': GSA SAM.gov
       'Health and Human Services': Departamento de Salud y Servicios Humanos
       'HHS Grants.gov': Grants.gov del HHS
@@ -81,6 +81,7 @@ contact_page:
       'National Credit Union Administration (NCUA)': Administración Nacional de Cooperativas de Crédito (NCUA)
       'National Endowment for the Humanities (NEH)': Fondo Nacional para las Humanidades (NEH, siglas en inglés)
       'National Labor Relations Board': Junta Nacional de Relaciones Laborales
+      'National Transportation Safety Board (NTSB)': Junta Nacional de Seguridad en el Transporte (NTSB)
       'Office of Personnel Management': Oficina de Administración de Personal (OPM)
       'OPM Employee Express': OPM Empleado Express
       'OPM Services Online': 'Servicios en línea de OPM'
@@ -92,6 +93,7 @@ contact_page:
       'Securities and Exchange Commission': Comisión de Bolsa y Valores
       'Social Security Administration (SSA)': Administración del Seguro Social (SSA, por su siglas en inglés)
       'State of Arkansas': Estado de Arkansas
+      'State of California': Estado de California
       'State of Colorado': Estado de Colorado
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programas de Viajero de Confianza (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agencia de los Estados Unidos para el Desarrollo Internacional
