--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -76,7 +76,7 @@ contact_page:
       'National Credit Union Administration (NCUA)': Administration nationale des coopératives de crédit (NCUA)
       'National Endowment for the Humanities (NEH)': Fondation nationale pour les sciences humaines (NEH)
       'National Labor Relations Board': Commission nationale des relations de travail
-      'National Transportation Safety Board (NTSB)': Conseil national de la sécurité des transports (NTSB)
+      'National Transportation Safety Board (NTSB)': Conseil national de sécurité des transports (NTSB)
       'Office of Personnel Management': Bureau de la gestion du personnel (OPM)
       'OPM Employee Express': OPM Employé Express
       'OPM Services Online': 'Services OPM en ligne'
