LG-13107: Contact us form updates (#1239)
* Update agency names

* Add hidden language field to contact us form

--- a/_data/fr/settings.yml
+++ b/_data/fr/settings.yml
@@ -61,7 +61,7 @@ contact_page:
       'FDIC Resolution Request Management Portal': FDIC demande un portail de gestion des résolutions
       'FEMA Disaster Assistance': Assistance FEMA en cas de catastrophe
       'General Services Administration': Administration des services généraux
-      'Get .gov': Get.gov
+      'Get.gov': Get.gov
       'GSA Sam.gov': GSA SAM.gov
       'Health and Human Services': Santé et services sociaux
       'HHS Grants.gov': HHS Grants.gov
@@ -76,6 +76,7 @@ contact_page:
       'National Credit Union Administration (NCUA)': Administration nationale des coopératives de crédit (NCUA)
       'National Endowment for the Humanities (NEH)': Fondation nationale pour les sciences humaines (NEH)
       'National Labor Relations Board': Commission nationale des relations de travail
+      'National Transportation Safety Board (NTSB)': Conseil national de sécurité des transports (NTSB)
       'Office of Personnel Management': Bureau de la gestion du personnel (OPM)
       'OPM Employee Express': OPM Employé Express
       'OPM Services Online': 'Services OPM en ligne'
@@ -87,6 +88,7 @@ contact_page:
       'Securities and Exchange Commission': Commission des valeurs mobilières des États-Unis
       'Social Security Administration (SSA)': Administration de la sécurité sociale (SSA)
       'State of Arkansas': État de l’Arkansas
+      'State of California': État de Californie
       'State of Colorado': État de Colorado
       'Trusted Traveler Programs (Global Entry/Nexus/Sentri)': Programmes pour voyageurs de confiance (Global Entry/Nexus/Sentri)
       'U.S. Agency for International Development': Agence américaine pour le développement international
