--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -301,14 +301,14 @@ nav:
   contact_login_gov: Póngase en contacto con Login.gov
   contact_us:
     sections:
-      - name: Encuentra las respuestas a las preguntas más frecuentes
-        url: '#encuentra-las-respuestas-a-las-preguntas-más-frecuentes'
-      - name: Ponte en contacto
-        url: '#ponte-en-contacto'
-      - name: Asociarse con Login.gov
-        url: '#asociarse-con-logingov'
-      - name: Reportar un problema
-        url: '#reportar-un-problema'
+      - name: Busque respuesta a las preguntas más frecuentes
+        url: '#busque-respuesta-a-las-preguntas-más-frecuentes'
+      - name: Póngase en contacto
+        url: '#póngase-en-contacto'
+      - name: Asóciese con Login.gov
+        url: '#asóciese-con-logingov'
+      - name: Informe de un problema
+        url: '#informe-de-un-problema'
     title: Contacta con nosotros
   create_an_account: Crea una cuenta
   developer_guide: Guía para desarrolladores
@@ -327,10 +327,10 @@ nav:
   implementation: Implementación
   join_us:
     sections:
-      - name: Posiciones abiertas
-        url: '#posiciones-abiertas'
-      - name: Cómo aplicar
-        url: '#cómo-aplicar'
+      - name: Puestos vacantes
+        url: '#puestos-vacantes'
+      - name: Cómo presentar solicitud
+        url: '#cómo-presentar-solicitud'
     title: Únete a nuestro equipo
   menu: Menú
   overview: Resumen
