Update content/_help/verify-your-identity/overview._es.md (#1231)
Also extracted `image-bullet-list.html` for the guts of each column. We can
generate other columnar layouts easily from that.

Co-authored-by: Andrew Duthie <1779930+aduth@users.noreply.github.com>

--- a/_data/es/settings.yml
+++ b/_data/es/settings.yml
@@ -209,7 +209,7 @@ contact_page:
       verifying_identity: Verificar su identidad
 feedback_form:
   'no': 'No'
-  question: ¿Te resultó útil este artículo?
+  question: ¿Le resultó útil este artículo?
   'yes': 'Si'
 global:
   language: Idioma
