Try upgrading Jest and upgrade ESM support

--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,7 @@ exclude:
   - svgo.config.js
   - tsconfig.json
   - vendor
-  - webpack.config.js
+  - webpack.config.cjs
 
 copy_files:
   - from:
