Update SVGO to be CJS

--- a/_config.yml
+++ b/_config.yml
@@ -141,7 +141,7 @@ exclude:
   - README.md
   - scripts
   - spec
-  - svgo.config.js
+  - svgo.config.cjs
   - tsconfig.json
   - vendor
   - webpack.config.cjs
