--- a/babel.config.json
+++ b/babel.config.json
@@ -9,11 +9,13 @@
       }
     ],
     "@babel/preset-typescript",
-    ["@babel/preset-react", { "runtime": "automatic"}]
+    ["@babel/preset-react", { "runtime": "automatic" }]
   ],
   "env": {
     "test": {
-      "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
+      "presets": [
+        ["@babel/preset-env", { "targets": { "node": "current" }, "modules": "commonjs" }]
+      ]
     }
   }
 }
