--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "identity-site",
   "version": "1.0.0",
   "description": "login.gov static site",
+  "type": "module",
   "scripts": {
     "build:css": "build-sass assets/scss/*.scss --out-dir=_site/assets/css",
     "watch:css": "npm run build:css -- --watch",
@@ -16,7 +17,7 @@
     "lint:css": "stylelint '_sass/**/*.scss' 'assets/scss/**/*.scss'",
     "typecheck": "tsc",
     "pretest": "if [ -z $SKIP_BUILD ]; then make build; fi",
-    "test": "BABEL_ENV=test jest"
+    "test": "NODE_ENV=test node --import=esbuild-esm-loader/register --import=./spec/spec_helper.js --test spec/**/*.{js,ts,tsx}"
   },
   "repository": {
     "type": "git",
@@ -39,22 +40,19 @@
     "@18f/identity-stylelint-config": "^3.0.0",
     "@axe-core/puppeteer": "^4.8.1",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.6",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "esbuild-esm-loader": "^0.3.1",
     "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^5.0.1",
     "get-port": "^5.1.1",
-    "jest": "^26.6.3",
-    "jest-axe": "^4.1.0",
-    "jest-environment-node": "^26.6.2",
+    "jsdom": "^24.1.0",
     "prettier": "^3.1.0",
     "puppeteer": "^22.3.0",
     "saxophonist": "^2.0.0",
@@ -70,10 +68,10 @@
     "@18f/identity-components": "^2.0.0",
     "@18f/identity-design-system": "^9.0.0",
     "@18f/identity-i18n": "^1.0.1",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.2",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
     "concurrently": "^7.6.0",
     "core-js": "^3.29.1",
